slide7 battlecard updates

--- a/slide6.html
+++ b/slide6.html
@@ -199,180 +199,180 @@
             <tr>
                 <th class="header-feature">Feature</th>
                 <th class="header-fusefy">Fusefy <br> (AI Adoption Platform)</th>
-                <th class="header-competitor">Code gen tools (Cursor, Claude, Copilot & etc)</th>
-                <th class="header-competitor">App gen tools (Replit, Lovable AI, Convergence & etc)</th>
+                <th class="header-competitor">App-Gen Tools (Lovable AI, Replit)</th>
+                <th class="header-competitor">Code-Gen Tools (Cursor, GitHub Copilot,Claude)</th>
             </tr>
         </thead>
         <tbody>
             <tr>
-                <th scope="row" class="col-feature">No-code visual AI studio</th>
+                <th scope="row" class="col-feature">Bring Your Own Platform</th>
                 <td class="col-fusefy">
                     <div class="cell-content">
                         <svg class="icon" viewBox="0 0 24 24" fill="#28a745"><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"></path></svg>
-                        <span>Drag-drop, no code</span>
+                        <span>Seamlessly fits into any tech stack</span>
                     </div>
                 </td>
                 <td>
                     <div class="cell-content">
-                        <svg class="icon" viewBox="0 0 24 24" fill="#dc3545"><path d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"></path></svg>
-                        <span>Code-first (Cursor, Copilot)</span>
+                        <svg class="icon" viewBox="0 0 24 24" fill="#28a745"><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"></path></svg>
+                        <span>Rapid app prototyping in-platform</span>
                     </div>
                 </td>
                 <td> 
                     <div class="cell-content">
                         <svg class="icon" viewBox="0 0 24 24" fill="#28a745"><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"></path></svg>
-                        <span>Visual builders (Lovable, Replit)</span>
+                        <span>AI-powered code assistance in IDE</span>
                     </div>
                 </td>
             </tr>
             <tr>
-                <th scope="row" class="col-feature">Natural language for code/ app creation</th>
+                <th scope="row" class="col-feature">End-to-End Custom Integration</th>
                 <td class="col-fusefy">
                     <div class="cell-content">
                         <svg class="icon" viewBox="0 0 24 24" fill="#28a745"><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"></path></svg>
-                        <span>Prompts for apps & edits</span>
-                    </div>
-                </td>
-                <td>
-                    <div class="cell-content">
-                        <svg class="icon" viewBox="0 0 24 24" fill="#28a745"><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"></path></svg>
-                        <span>Code prompts (Cursor, Copilot)</span>
-                    </div>
-                </td>
-                <td>
-                    <div class="cell-content">
-                        <svg class="icon" viewBox="0 0 24 24" fill="#28a745"><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"></path></svg>
-                        <span>App prompts (Lovable, Replit)</span>
-                    </div>
-                </td>
-            </tr>
-            <tr>
-                <th scope="row" class="col-feature">Rapid agent deployment</th>
-                <td class="col-fusefy">
-                    <div class="cell-content">
-                        <svg class="icon" viewBox="0 0 24 24" fill="#28a745"><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"></path></svg>
-                        <span>Multi-channel, instant</span>
-                    </div>
-                </td>
-                <td>
-                    <div class="cell-content">
-                        <svg class="icon" viewBox="0 0 24 24" fill="#dc3545"><path d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"></path></svg>
-                        <span>Not agent-focused</span>
+                        <span>Seamlessly integrates the full lifecycle</span>
                     </div>
                 </td>
                 <td>
                     <div class="cell-content">
                         <svg class="icon" viewBox="0 0 24 24" fill="#f39c12"><path d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"></path></svg>
-                        <span>One-click deploy (Replit, Convergence)</span>
-                    </div>
-                </td>
-            </tr>
-            <tr>
-                <th scope="row" class="col-feature">Model finetuning</th>
-                <td class="col-fusefy">
-                    <div class="cell-content">
-                        <svg class="icon" viewBox="0 0 24 24" fill="#28a745"><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"></path></svg>
-                        <span>Task & workflow tuning</span>
+                        <span>Supports app export & limited integration</span>
                     </div>
                 </td>
                 <td>
                     <div class="cell-content">
                         <svg class="icon" viewBox="0 0 24 24" fill="#dc3545"><path d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"></path></svg>
-                        <span>Built-in models only</span>
+                        <span>Focused on coding only</span>
+                    </div>
+                </td>
+            </tr>
+            <tr>
+                <th scope="row" class="col-feature">From Ideation to Use Case</th>
+                <td class="col-fusefy">
+                    <div class="cell-content">
+                        <svg class="icon" viewBox="0 0 24 24" fill="#28a745"><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"></path></svg>
+                        <span>Converts ideas into production-ready solutions</span>
+                    </div>
+                </td>
+                <td>
+                    <div class="cell-content">
+                        <svg class="icon" viewBox="0 0 24 24" fill="#28a745"><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"></path></svg>
+                        <span>Rapid prototyping from idea to app demo</span>
                     </div>
                 </td>
                 <td>
                     <div class="cell-content">
                         <svg class="icon" viewBox="0 0 24 24" fill="#dc3545"><path d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"></path></svg>
-                        <span>Limited / Not available</span>
+                        <span>Only generates code snippets</span>
                     </div>
                 </td>
             </tr>
             <tr>
-                <th scope="row" class="col-feature">Templates & design blocks</th>
+                <th scope="row" class="col-feature">ROI Projection</th>
                 <td class="col-fusefy">
                     <div class="cell-content">
                         <svg class="icon" viewBox="0 0 24 24" fill="#28a745"><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"></path></svg>
-                        <span>Prebuilt agents & blocks</span>
-                    </div>
-                </td>
-                <td>
-                    <div class="cell-content">
-                        <svg class="icon" viewBox="0 0 24 24" fill="#dc3545"><path d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"></path></svg>
-                        <span>None</span>
-                    </div>
-                </td>
-                <td>
-                    <div class="cell-content">
-                        <svg class="icon" viewBox="0 0 24 24" fill="#28a745"><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"></path></svg>
-                        <span>Starter templates (Replit, Lovable)</span>
-                    </div>
-                </td>
-            </tr>
-            <tr>
-                <th scope="row" class="col-feature">ROI & analytics dashboards</th>
-                <td class="col-fusefy">
-                    <div class="cell-content">
-                        <svg class="icon" viewBox="0 0 24 24" fill="#28a745"><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"></path></svg>
-                        <span>ROI, cost, maturity</span>
+                        <span>Built-in ROI & TCO analysis</span>
                     </div>
                 </td>
                 <td>
                     <div class="cell-content">
                         <svg class="icon" viewBox="0 0 24 24" fill="#f39c12"><path d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"></path></svg>
-                        <span>Basic usage counts (Cursor)</span>
+                        <span>External ROI insights</span>
                     </div>
                 </td>
                 <td>
                     <div class="cell-content">
                         <svg class="icon" viewBox="0 0 24 24" fill="#dc3545"><path d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"></path></svg>
-                        <span>Not available</span>
+                        <span>Focused on coding; no business metrics</span>
                     </div>
                 </td>
             </tr>
             <tr>
-                <th scope="row" class="col-feature">Cloud/API/data integration</th>
+                <th scope="row" class="col-feature">Project Plan generation</th>
                 <td class="col-fusefy">
                     <div class="cell-content">
                         <svg class="icon" viewBox="0 0 24 24" fill="#28a745"><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"></path></svg>
-                        <span>Low-code workflows, APIs</span>
-                    </div>
-                </td>
-                <td>
-                    <div class="cell-content">
-                        <svg class="icon" viewBox="0 0 24 24" fill="#28a745"><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"></path></svg>
-                        <span>GitHub, Slack, IDE (Cursor, Copilot)</span>
+                        <span>Auto roadmaps & milestones</span>
                     </div>
                 </td>
                 <td>
                     <div class="cell-content">
                         <svg class="icon" viewBox="0 0 24 24" fill="#f39c12"><path d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"></path></svg>
-                        <span>Limited plugins / triggers</span>
+                        <span>Planning via external tools</span>
+                    </div>
+                </td>
+                <td>
+                    <div class="cell-content">
+                        <svg class="icon" viewBox="0 0 24 24" fill="#dc3545"><path d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"></path></svg>
+                        <span>No built-in planning or roadmap tools</span>
                     </div>
                 </td>
             </tr>
             <tr>
-                <th scope="row" class="col-feature">Compliance & governance</th>
+                <th scope="row" class="col-feature">Continuous Monitoring & Optimization</th>
                 <td class="col-fusefy">
                     <div class="cell-content">
                         <svg class="icon" viewBox="0 0 24 24" fill="#28a745"><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"></path></svg>
-                        <span>Full enterprise controls</span>
+                        <span>AI Audit Suite for tracking & improvement</span>
+                    </div>
+                </td>
+                <td>
+                    <div class="cell-content">
+                        <svg class="icon" viewBox="0 0 24 24" fill="#f39c12"><path d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"></path></svg>
+                        <span>Limited monitoring for prototypes</span>
                     </div>
                 </td>
                 <td>
                     <div class="cell-content">
                         <svg class="icon" viewBox="0 0 24 24" fill="#dc3545"><path d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"></path></svg>
-                        <span>None</span>
-                    </div>
-                </td>
-                <td>
-                    <div class="cell-content">
-                        <svg class="icon" viewBox="0 0 24 24" fill="#dc3545"><path d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"></path></svg>
-                        <span>None</span>
+                        <span>No runtime or performance tracking</span>
                     </div>
                 </td>
             </tr>
             <tr>
+                <th scope="row" class="col-feature">Built-in Compliance & Governance</th>
+                <td class="col-fusefy">
+                    <div class="cell-content">
+                        <svg class="icon" viewBox="0 0 24 24" fill="#28a745"><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"></path></svg>
+                        <span>Security, explainability, regulatory checks</span>
+                    </div>
+                </td>
+                <td>
+                    <div class="cell-content">
+                        <svg class="icon" viewBox="0 0 24 24" fill="#f39c12"><path d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"></path></svg>
+                        <span>Compliance managed externally</span>
+                    </div>
+                </td>
+                <td>
+                    <div class="cell-content">
+                        <svg class="icon" viewBox="0 0 24 24" fill="#dc3545"><path d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"></path></svg>
+                        <span>No enterprise compliance features</span>
+                    </div>
+                </td>
+            </tr>
+            <tr>
+                <th scope="row" class="col-feature">Dedicated Customer Support</th>
+                <td class="col-fusefy">
+                    <div class="cell-content">
+                        <svg class="icon" viewBox="0 0 24 24" fill="#28a745"><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"></path></svg>
+                        <span>Full adoption support from idea to rollout</span>
+                    </div>
+                </td>
+                <td>
+                    <div class="cell-content">
+                        <svg class="icon" viewBox="0 0 24 24" fill="#f39c12"><path d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"></path></svg>
+                        <span>Community/forum support</span>
+                    </div>
+                </td>
+                <td>
+                    <div class="cell-content">
+                        <svg class="icon" viewBox="0 0 24 24" fill="#dc3545"><path d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"></path></svg>
+                        <span>Limited support / AI-driven only</span>
+                    </div>
+                </td>
+            </tr>
+            <!-- <tr>
                 <th scope="row" class="col-feature">Ideal User</th>
                 <td class="col-fusefy">
                     <div class="cell-content">
@@ -390,7 +390,7 @@
                         <span>🚀 Startups, SMBs (MVPs)</span>
                     </div>
                 </td>
-            </tr>
+            </tr> -->
         </tbody>
     </table>
   </div>
