Updated slides, styles, and other changes for Fuse-Healthcare project

--- a/slide2.html
+++ b/slide2.html
@@ -74,7 +74,7 @@
     /* Step buttons */
     .steps-fusefy {
       position: absolute;
-      top: 330px;
+      top: 270px;
       left: 50%;
       transform: translateX(-50%);
       display: flex;
@@ -149,7 +149,7 @@
     /* --- UPDATED FEATURE SECTION (TWO BIG BOXES) --- */
     .features-fusefy {
       position: absolute;
-      top: 470px;
+      top: 370px;
       left: 50%;
       transform: translateX(-50%);
       display: flex;
@@ -315,12 +315,6 @@
     just faster go-to-market with the platforms you already trust.
   </div>
 
-  <!-- Timeline -->
-  <div class="timeline-fusefy">
-    <div class="circle-fusefy"></div>
-    <div class="circle-fusefy"></div>
-    <div class="circle-fusefy"></div>
-  </div>
 
   <!-- Step buttons -->
   <div class="steps-fusefy">
@@ -333,22 +327,24 @@
   <!-- Updated Feature Cards -->
   <div class="features-fusefy">
     <div class="feature-fusefy old-way">
-      <h3>Manual Integrations</h3>
+      <h3>AI modernization</h3>
       <ul>
-        <li> RPA & SAAS subscriptions</li>
-        <li>OCR Tools</li>
-        <li>Vendor Lock-in risk</li>
+        <li>Ditch rigid, expensive RPA tools and  subscriptions.</li>
+        <li>Stop siloed, manual workflows.</li>
+        <li>Uplift your OCR engines AI with latest GenAI models.</li>
+        <li>End vendor lock-in forever.</li>
         <!-- <li>Custom connectors, scripts, and APIs</li> -->
       </ul>
     </div>
 
     <div class="feature-fusefy new-way">
-      <h3>Agentic AI Automation</h3>
+      <h3>Agentic AI Workflows</h3>
       <ul>
-        <li>Agentic AI Workflows</li>
-        <li>Custom LLMs to Private LLMs</li>
-        <li>Full control to Customer managed workflows</li>
-        <li>Dynamic adaptability</li>
+        <li>Goal-oriented AI automation</li>
+        <li>Custom LLMs to Private → LLMs Proprietary data fuels your AI.</li>
+        <li>Your AI, your workflows</li>
+        <li>Your workflows adapt instantly</li>
+        <li>Total control of your workflows.</li>
       </ul>
     </div>
   </div>
