--- a/slide4.html
+++ b/slide4.html
@@ -361,6 +361,8 @@
                 <div class="card-grid">
                     <div class="card" style="position: relative;">
                         <h3>Healthcare</h3>
+                        <img src="images/Brown.png" alt="Icon"
+                            style="position: absolute; top: -13px; right: 8px; width: 45px; height: 45px;" />
                         <p>Streamlining patient care and administrative workflows.</p>
                         <div style="position: absolute; bottom: 8px; right: 8px; color: #155596; cursor: pointer;"
                             onclick="window.location.href = '#page-4a'">
@@ -371,31 +373,35 @@
                             </svg>
                         </div>
                     </div>
-                    <div class="card">
+                    <div class="card" style="position: relative;">
                         <h3>Finance</h3>
+                        <img src="images/Brown.png" alt="Icon"
+                            style="position: absolute; top: -13px; right: 8px; width: 45px; height: 45px;" />
                         <p>Automating financial operations and enhancing security.</p>
                     </div>
-                    <div class="card">
+                    <div class="card" style="position: relative;">
                         <h3>Real Estate</h3>
                         <p>Simplifying property management and client interactions.</p>
                     </div>
-                    <div class="card">
+                    <div class="card" style="position: relative;">
                         <h3>Logistics</h3>
                         <p>Optimizing supply chains and tracking from end to end.</p>
                     </div>
-                    <div class="card">
+                    <div class="card" style="position: relative;">
                         <h3>Education</h3>
                         <p>Personalizing learning experiences and managing institutions.</p>
                     </div>
-                    <div class="card">
+                    <div class="card" style="position: relative;">
                         <h3>HR</h3>
+                        <img src="images/HR.png" alt="Icon"
+                            style="position: absolute; top: -13px; right: 8px; width: 35px; height: 35px;" />
                         <p>Improving employee lifecycle management and talent acquisition.</p>
                     </div>
-                    <div class="card">
+                    <div class="card" style="position: relative;">
                         <h3>Retail & E-commerce</h3>
                         <p>Enhancing customer shopping experiences and inventory.</p>
                     </div>
-                    <div class="card">
+                    <div class="card" style="position: relative;">
                         <h3>Manufacturing</h3>
                         <p>Boosting production efficiency and quality control.</p>
                     </div>
@@ -415,40 +421,48 @@
             </div>
             <div id="categories" class="tab-content">
                 <div class="card-grid">
-                    <div class="card">
+                    <div class="card" style="position: relative;">
                         <h3>BI Agents</h3>
+                        <img src="images/Brown.png" alt="Icon"
+                            style="position: absolute; top: -13px; right: 8px; width: 40px; height: 40px;" />
                         <p>Delivering actionable insights from complex data sets.</p>
                     </div>
-                    <div class="card">
+                    <div class="card" style="position: relative;">
                         <h3>Voice Agents</h3>
+                        <img src="images/Voice Agent.png" alt="Icon"
+                            style="position: absolute; top: -13px; right: 8px; width: 40px; height: 40px;" />
                         <p>Providing natural, conversational voice-based assistance.</p>
                     </div>
-                    <div class="card">
+                    <div class="card" style="position: relative;">
                         <h3>Customer Support Agents</h3>
                         <p>Resolving customer queries with speed and accuracy.</p>
                     </div>
 
-                    <div class="card">
+                    <div class="card" style="position: relative;">
                         <h3>Claims Processing Agents</h3>
                         <p>Automating the validation and processing of claims.</p>
                     </div>
-                    <div class="card">
+                    <div class="card" style="position: relative;">
                         <h3>CRM Agents</h3>
+                        <img src="images/CRM.png" alt="Icon"
+                            style="position: absolute; top: -13px; right: 8px; width: 35px; height: 35px;" />
                         <p>Managing customer relationships and sales pipelines.</p>
                     </div>
-                    <div class="card">
+                    <div class="card" style="position: relative;">
                         <h3>Knowledge Search Agents</h3>
+                        <img src="images/KN.png" alt="Icon"
+                            style="position: absolute; top: -13px; right: 8px; width: 35px; height: 35px;" />
                         <p>Finding and retrieving relevant information instantly.</p>
                     </div>
-                    <div class="card">
+                    <div class="card" style="position: relative;">
                         <h3>HCM Agents</h3>
                         <p>Streamlining human capital management processes.</p>
                     </div>
-                    <div class="card">
+                    <div class="card" style="position: relative;">
                         <h3>ERP Agents</h3>
                         <p>Integrating and managing core business operations.</p>
                     </div>
-                    <div class="card">
+                    <div class="card" style="position: relative;">
                         <h3>LLM FINE-TUNING</h3>
                         <p>Replacing vendor tools and SaaS subscriptions for RPA, OCR, and automation with custom
                             Agentic AI workflows..</p>
