--- a/slide5.html
+++ b/slide5.html
@@ -230,8 +230,7 @@
 
   <header class="slide-header" data-id="header">
     <h1 class="zoom-in" data-auto-animate data-auto-animate-duration="1.5">
-      Seamless AI Integration
-    </h1>
+      Connect any application, seamlessly    </h1>
     <img
       src="images/Logo.png"
       alt="Company Logo"
@@ -263,7 +262,7 @@
         <img src="images/Green.png" alt="Green Field Icon" style="width: 40px; height: 40px; margin-right: 1.2rem;">
         <div>
             <h3 style="font-size: 1.1rem; font-weight: 700; white-space: normal; margin-bottom: 5px;">Green Field (New)</h3>
-            <p style="font-size: 0.95rem; color: #666; margin: 0; line-height: 1.3;">New applications we support</p>
+            <p style="font-size: 0.95rem; color: #666; margin: 0; line-height: 1.3;">Supports new application development</p>
         </div>
     </div>
 
@@ -272,7 +271,7 @@
         <img src="images/Brown.png" alt="Brown Field Icon" style="width: 40px; height: 40px; margin-right: 1.2rem;">
         <div>
             <h3 style="font-size: 1.1rem; font-weight: 700; white-space: normal; margin-bottom: 5px;">Brown Field (Old)</h3>
-            <p style="font-size: 0.95rem; color: #666; margin: 0; line-height: 1.3;">Bring your old applications</p>
+            <p style="font-size: 0.95rem; color: #666; margin: 0; line-height: 1.3;">Bring Agentic AI capabilities to existing apps</p>
         </div>
     </div>
 
@@ -280,8 +279,8 @@
     <div class="platform-card" style="width: 250px; height: 80px; padding: 1rem;">
         <img src="images/Lang.png" alt="Multi-Language Icon" style="width: 40px; height: 40px; margin-right: 1.2rem;">
         <div>
-            <h3 style="font-size: 1.1rem; font-weight: 700; white-space: normal; margin-bottom: 5px;">Multi-Language<br>Capabilities</h3>
-            <p style="font-size: 0.95rem; color: #666; margin: 0; line-height: 1.3;">Seamless integration</p>
+            <h3 style="font-size: 1.1rem; font-weight: 700; white-space: normal; margin-bottom: 5px;">Multi-Lang<br>Capabilities</h3>
+            <p style="font-size: 0.95rem; color: #666; margin: 0; line-height: 1.3;">Supports various languages and tools</p>
         </div>
     </div>
 
@@ -301,7 +300,7 @@
 
 
   <!-- SECTION 2: AI Platforms & Tools Section -->
-  <h2 class="ai-platform-heading">Bring Your own Frameworks & Tools</h2>
+  <h2 class="ai-platform-heading">Agnostic Frameworks and Tools</h2>
   <div class="platform-cards">
     <div class="platform-card">
       <img src="images/Agentforce.png" alt="Agentforce" />
@@ -320,13 +319,13 @@
       <h3>Langchain</h3>
     </div>
     <div class="platform-card">
-      <img src="images/n8n.png" alt="N8N" />
-      <h3>N8N</h3>
+      <img src="images/Agentic Orchestrators.png" alt="Agentic Orchestrators" />
+      <h3>Agentic <br> Orchestrator</h3>
     </div>
   </div>
 
   <!-- SECTION 3: Bring Your Own Platform Section -->
-  <h2 class="byo-platform-heading">Bring Your Own Infrastructure</h2>
+  <h2 class="byo-platform-heading">Bring Your Own Platforms</h2>
   <div class="platform-cards">
     <div class="platform-card">
       <img src="images/AWS.png" alt="AWS" />
@@ -339,6 +338,10 @@
      <div class="platform-card">
       <img src="images/Azure.png" alt="AZURE" />
       <h3>AZURE</h3>
+    </div>
+    <div class="platform-card">
+      <img src="images/Kubernetes.png" alt="Kubernetes" />
+      <h3>Kubernetes</h3>
     </div>
   </div>
 </section>
