--- a/slide8.html
+++ b/slide8.html
@@ -177,19 +177,22 @@
       <h2 class="bi-dashboard-card-title">Reporting & Dashboard Features</h2>
       <ul class="bi-dashboard-card-list">
         <li class="bi-dashboard-card-list-item"><span class="bi-dashboard-check-icon">✔</span> Trend line charts and breakdown of expirations by state</li>
+        <li class="bi-dashboard-card-list-item"><span class="bi-dashboard-check-icon">✔</span> Frequency analysis of shared data categories</li>
+        <li class="bi-dashboard-card-list-item"><span class="bi-dashboard-check-icon">✔</span> Breakdown of consent authorization types</li>
+        <li class="bi-dashboard-card-list-item"><span class="bi-dashboard-check-icon">✔</span> Tracking of operational activity trends and KPIs</li>
         <li class="bi-dashboard-card-list-item"><span class="bi-dashboard-check-icon">✔</span> Bar chart of consents by purpose</li>
         <li class="bi-dashboard-card-list-item"><span class="bi-dashboard-check-icon">✔</span> Detailed data table with patient demographics and consent details</li>
         <li class="bi-dashboard-card-list-item"><span class="bi-dashboard-check-icon">✔</span> Pie chart of expirations per state with drill-down capabilities</li>
       </ul>
     </div>
-    <div class="bi-dashboard-card">
+    <!-- <div class="bi-dashboard-card">
       <h2 class="bi-dashboard-card-title">CFO Dashboard (Q2)</h2>
       <ul class="bi-dashboard-card-list">
         <li class="bi-dashboard-card-list-item"><span class="bi-dashboard-check-icon">✔</span> Frequency analysis of shared data categories</li>
         <li class="bi-dashboard-card-list-item"><span class="bi-dashboard-check-icon">✔</span> Breakdown of consent authorization types</li>
         <li class="bi-dashboard-card-list-item"><span class="bi-dashboard-check-icon">✔</span> Tracking of operational activity trends and KPIs</li>
       </ul>
-    </div>
+    </div> -->
     <div class="bi-dashboard-card">
       <h2 class="bi-dashboard-card-title">Saved Reports & Sharing</h2>
       <ul class="bi-dashboard-card-list">
