Button working and added images

--- a/slide9.html
+++ b/slide9.html
@@ -336,21 +336,7 @@
       <div class="ai-info-card">
         <div class="ai-card-header">
           <div class="ai-icon-container">
-            <svg xmlns="http://www.w3.org/2000/svg" class="ai-icon" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
-              <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-              <path d="M15.532 12.784a5.5 5.5 0 1 0 -11.064 0a5.5 5.5 0 0 0 11.064 0z"></path>
-              <path d="M15.532 12.784l3.468 -1.784"></path>
-              <path d="M19 11v1.5"></path>
-              <path d="M12.5 21l1 -1.5"></path>
-              <path d="M16.5 18l-1 -1.5"></path>
-              <path d="M6 18l-1 1.5"></path>
-              <path d="M8.5 21l-1 -1.5"></path>
-              <path d="M12.5 4l1 1.5"></path>
-              <path d="M16.5 7l-1 -1.5"></path>
-              <path d="M6 7l-1 -1.5"></path>
-              <path d="M8.5 4l-1 1.5"></path>
-              <path d="M4 14.5h1.5"></path>
-            </svg>
+             <img src="images/Level3.webp" alt="Level 3 Icon" class="ai-icon" style="width: 1.5rem; height: 1.5rem; margin-right: 0.75rem;" />
           </div>
           <h2>Level: Multi-Process AI systems optimize workflows extensively.</h2>
         </div>
@@ -367,24 +353,7 @@
       <div class="ai-info-card highlight">
         <div class="ai-card-header">
           <div class="ai-icon-container">
-            <svg xmlns="http://www.w3.org/2000/svg" class="ai-icon" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
-              <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-              <path d="M4 12h1"></path>
-              <path d="M19 12h1"></path>
-              <path d="M12 4v1"></path>
-              <path d="M12 19v1"></path>
-              <path d="M17 5l-1 -1"></path>
-              <path d="M8 6l-1 -1"></path>
-              <path d="M7 17l-1 1"></path>
-              <path d="M16 18l-1 1"></path>
-              <path d="M9 12a3 3 0 1 0 6 0a3 3 0 0 0 -6 0"></path>
-              <path d="M12 15l0 6"></path>
-              <path d="M15 12l4.33 2.5"></path>
-              <path d="M12 9l-4.33 -2.5"></path>
-              <path d="M9 12l-4.33 2.5"></path>
-              <path d="M12 15l4.33 2.5"></path>
-              <path d="M12 9l4.33 -2.5"></path>
-            </svg>
+            <img src="images/Strategy.png" alt="Level 3 Icon" class="ai-icon" style="width: 1.5rem; height: 1.5rem; margin-right: 0.75rem;" />
           </div>
           <h2>Our Strategy</h2>
         </div>
@@ -400,19 +369,7 @@
       <div class="ai-info-card">
         <div class="ai-card-header">
           <div class="ai-icon-container">
-              <svg xmlns="http://www.w3.org/2000/svg" class="ai-icon" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                  <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-                  <path d="M12 18.004h-4.343c-2.572 -.004 -4.657 -2.011 -4.657 -4.488c0 -2.476 2.085 -4.484 4.657 -4.484c.36 .001 .72 .043 1.07 .123c1.905 -2.309 4.746 -3.645 7.78 -3.149c3.034 .497 5.48 2.898 5.974 5.927c.015 .099 .024 .199 .026 .299c.356 .03 .71 .103 1.054 .213c2.08 .658 3.235 2.81 2.578 4.889c-.658 2.08 -2.81 3.235 -4.889 2.578c-.42 -.133 -.81 -.314 -1.171 -.53"></path>
-                  <path d="M12 12a3 3 0 1 0 6 0a3 3 0 0 0 -6 0"></path>
-                  <path d="M12 15v2"></path>
-                  <path d="M15 12h2"></path>
-                  <path d="M9 12h-2"></path>
-                  <path d="M12 9v-2"></path>
-                  <path d="M14.121 14.121l1.414 1.414"></path>
-                  <path d="M14.121 9.879l1.414 -1.414"></path>
-                  <path d="M9.879 9.879l-1.414 -1.414"></path>
-                  <path d="M9.879 14.121l-1.414 1.414"></path>
-              </svg>
+              <img src="images/GCP_2.png" alt="Level 3 Icon" class="ai-icon" style="width: 3.5rem; height: 2.5rem; margin-right: 0.75rem;" />
           </div>
           <h2>Implementation & GCP</h2>
         </div>
@@ -443,6 +400,7 @@
           <ul class="space-y-2">
             <li>Enables real-time querying, analytics, and reporting on large volumes of healthcare data.</li>
             <li>Seamless integration with AI/ML pipelines for predictive healthcare insights.</li>
+            <li>Ensures secure and scalable data management.</li>
           </ul>
         </div>
       </div>
