--- a/slide2.html
+++ b/slide2.html
@@ -319,7 +319,7 @@
   <!-- Step buttons -->
   <div class="steps-fusefy">
     <div class="step-fusefy orange">16 +Hours </div>
-    <div class="step-fusefy white">2 Weeks</div>
+    <div class="step-fusefy white">2+ Weeks</div>
     <div class="step-fusefy blue">1+ month production launch</div>
   </div>
 
