--- a/slide7.html
+++ b/slide7.html
@@ -267,7 +267,7 @@
     .fusefy-automated-wrapper {
       background-color: #f7f8fa;
       border-radius: 16px;
-      padding: 2rem 1rem;
+      padding: 1rem 1rem;
       width: 98vw;
       max-width: 1600px;
       margin-left: 50%;
@@ -282,7 +282,7 @@
     .fusefy-automated-flow h3 {
       font-weight: 600;
       color: var(--text-secondary);
-      margin-bottom: 2.5rem;
+      margin-bottom: 1.5rem;
       font-size: 0.9rem;
       text-transform: uppercase;
       letter-spacing: 1px;
@@ -295,7 +295,7 @@
       gap: 1.5rem;
       flex-wrap: nowrap;
       /* <--- Ensures everything stays on one line */
-      overflow-x: auto;
+      /* overflow-x: auto; */
     }
 
     .fusefy-flow-step {
