--- a/slide1.html
+++ b/slide1.html
@@ -192,7 +192,7 @@
 
     <!-- Paragraph below with fragment index 1 -->
     <p class="main-heading fragment" data-fragment-index="1">
-      Agentic AI as A Service - Turning intelligence <br> to actions
+     AIaaS - Turning intelligence  to actions
     </p>
 
     <!-- NEW: Container for the icon and text. The fragment attributes are moved here so they appear together. -->
