--- a/slide12.html
+++ b/slide12.html
@@ -71,6 +71,13 @@
       data-auto-animate-duration="1"
     />
   </header>
+  <div style="display: flex; justify-content: flex-end; margin: 24px 0 0 0;">
+  <a href="images/ilovepdf_merged.pdf" download
+  style="display: inline-block; background: #0056ff; color: #fff; text-decoration: none; border: none; border-radius: 6px; padding: 10px 24px; font-size: 1rem; font-weight: 600; cursor: pointer; box-shadow: 0 2px 8px rgba(0,0,0,0.08); text-align: center;">
+  Download PDF
+</a>
+
+</div>
 
   <!-- Centered Thank You Section -->
   <div class="thank-you-container">
