--- a/slide8.html
+++ b/slide8.html
@@ -185,14 +185,7 @@
         <li class="bi-dashboard-card-list-item"><span class="bi-dashboard-check-icon">✔</span> Pie chart of expirations per state with drill-down capabilities</li>
       </ul>
     </div>
-    <!-- <div class="bi-dashboard-card">
-      <h2 class="bi-dashboard-card-title">CFO Dashboard (Q2)</h2>
-      <ul class="bi-dashboard-card-list">
-        <li class="bi-dashboard-card-list-item"><span class="bi-dashboard-check-icon">✔</span> Frequency analysis of shared data categories</li>
-        <li class="bi-dashboard-card-list-item"><span class="bi-dashboard-check-icon">✔</span> Breakdown of consent authorization types</li>
-        <li class="bi-dashboard-card-list-item"><span class="bi-dashboard-check-icon">✔</span> Tracking of operational activity trends and KPIs</li>
-      </ul>
-    </div> -->
+
     <div class="bi-dashboard-card">
       <h2 class="bi-dashboard-card-title">Saved Reports & Sharing</h2>
       <ul class="bi-dashboard-card-list">
@@ -205,18 +198,25 @@
 
   <!-- Second Row: Small Boxes -->
   <div class="bi-dashboard-smallcard-container">
-    <div class="bi-dashboard-smallcard" data-img-src="images/Barchart.png">
+    <div class="bi-dashboard-smallcard" data-img-src="images/Green-2.png">
       <img src="images/Green-2.png" alt="Chart Icon" class="bi-smallcard-icon">
       <span>Privacy Disclosure Expirations by Week</span>
     </div>
-    <div class="bi-dashboard-smallcard" data-img-src="images/Barchart.png">
+    <div class="bi-dashboard-smallcard" data-img-src="images/Blue.png">
       <img src="images/Blue.png" alt="Chart Icon" class="bi-smallcard-icon">
       <span>Active Consents by State of Residence (Q2 2025)</span>
     </div>
-    <div class="bi-dashboard-smallcard" data-img-src="images/Barchart.png">
+    <div class="bi-dashboard-smallcard" data-img-src="images/Circle.png">
       <img src="images/Circle.png" alt="Chart Icon" class="bi-smallcard-icon">
       <span>Expired Privacy Disclosures by State (Last 15 Days)</span>
     </div>
   </div>
+
+<div class="bi-image-popup-container" id="biImagePopup">
+  <span class="bi-image-popup-close-btn" id="biImagePopupClose">&times;</span>
+  <img class="bi-image-popup-content" id="biImagePopupImg" src="" alt="Zoomed Chart" />
+</div>
+
+<script src="slides-interactive.js"></script>
 
 </section>
