--- a/slide4.html
+++ b/slide4.html
@@ -361,8 +361,8 @@
                 <div class="card-grid">
                     <div class="card" style="position: relative;">
                         <h3>Healthcare</h3>
-                        <img src="images/Healthcare.jpg" alt="Icon"
-                            style="position: absolute; top: -13px; right: 8px; width: 45px; height: 45px;" />
+                        <img src="images/Health-Y.png" alt="Icon"
+                            style="position: absolute; top: -13px; right: 8px; width: 35px; height: 35px;" />
                         <p>Streamlining patient care and administrative workflows.</p>
                         <div style="position: absolute; bottom: 8px; right: 8px; color: #155596; cursor: pointer;"
                             onclick="window.location.href = '#page-4a'">
@@ -375,25 +375,25 @@
                     </div>
                     <div class="card" style="position: relative;">
                         <h3>Finance</h3>
-                        <img src="images/Finance.jpg" alt="Icon"
+                        <img src="images/Finance-Y.webp" alt="Icon"
                             style="position: absolute; top: -13px; right: 8px; width: 45px; height: 45px;" />
                         <p>Automating financial operations and enhancing security.</p>
                     </div>
                     <div class="card" style="position: relative;">
                         <h3>Real Estate</h3>
-                        <img src="images/Realestate.png" alt="Icon"
+                        <img src="images/Realestate-Y.jpg" alt="Icon"
                             style="position: absolute; top: -13px; right: 8px; width: 45px; height: 45px;" />
                         <p>Simplifying property management and client interactions.</p>
                     </div>
                     <div class="card" style="position: relative;">
                         <h3>Logistics</h3>
-                        <img src="images/Logestics.jpg" alt="Icon"
+                        <img src="images/Logistics-Y.webp" alt="Icon"
                             style="position: absolute; top: -13px; right: 8px; width: 45px; height: 45px;" />
                         <p>Optimizing supply chains and tracking from end to end.</p>
                     </div>
                     <div class="card" style="position: relative;">
                         <h3>Education</h3>
-                        <img src="images/Education.png" alt="Icon"
+                        <img src="images/Education-Y.png" alt="Icon"
                             style="position: absolute; top: -13px; right: 8px; width: 40px; height: 40px;" />
                         <p>Personalizing learning experiences and managing institutions.</p>
                     </div>
@@ -405,19 +405,19 @@
                     </div>
                     <div class="card" style="position: relative;">
                         <h3>Retail & E-commerce</h3>
-                        <img src="images/Retail.webp" alt="Icon"
+                        <img src="images/Realestate-Y.jpg" alt="Icon"
                             style="position: absolute; top: -13px; right: 8px; width: 45px; height: 45px;" />
                         <p>Enhancing customer shopping experiences and inventory.</p>
                     </div>
                     <div class="card" style="position: relative;">
                         <h3>Manufacturing</h3>
-                        <img src="images/Manufacturing.webp" alt="Icon"
-                            style="position: absolute; top: -13px; right: 8px; width: 45px; height: 45px;" />
+                        <img src="images/Manufacturing -Y.png" alt="Icon"
+                            style="position: absolute; top: -13px; right: 8px; width: 35px; height: 35px;" />
                         <p>Boosting production efficiency and quality control.</p>
                     </div>
                     <div class="card" style="position: relative;">
                         <h3>BI Agent</h3>
-                        <img src="images/BI Agent.jpg" alt="Icon"
+                        <img src="images/BI-Y.png" alt="Icon"
                             style="position: absolute; top: -13px; right: 8px; width: 45px; height: 45px;" />
                         <p>Data-driven insights for decisions.</p>
                         <div style="position: absolute; bottom: 8px; right: 8px; color: #155596; cursor: pointer;"
@@ -435,7 +435,7 @@
                 <div class="card-grid">
                     <div class="card" style="position: relative;">
                         <h3>BI Agents</h3>
-                        <img src="images/BI Agent.jpg" alt="Icon"
+                        <img src="images/BI-Y.png" alt="Icon"
                             style="position: absolute; top: -13px; right: 8px; width: 40px; height: 40px;" />
                         <p>Delivering actionable insights from complex data sets.</p>
                     </div>
@@ -452,8 +452,8 @@
 
                     <div class="card" style="position: relative;">
                         <h3>Claims Processing Agents</h3>
-                        <img src="images/Claims.webp" alt="Icon"
-                            style="position: absolute; top: -13px; right: 8px; width: 45px; height: 45px;" />
+                        <img src="images/Claims Processing Agents -Y.webp" alt="Icon"
+                            style="position: absolute; top: -13px; right: 8px; width: 35px; height: 35px;" />
                         <p>Automating the validation and processing of claims.</p>
                     </div>
                     <div class="card" style="position: relative;">
@@ -476,14 +476,14 @@
                     </div>
                     <div class="card" style="position: relative;">
                         <h3>ERP Agents</h3>
-                        <img src="images/ERP.webp" alt="Icon"
-                            style="position: absolute; top: -13px; right: 8px; width: 45px; height: 45px;" />
+                        <img src="images/ERP Agents-Y.png" alt="Icon"
+                            style="position: absolute; top: -13px; right: 8px; width:35px; height: 35px;" />
                         <p>Integrating and managing core business operations.</p>
                     </div>
                     <div class="card" style="position: relative;">
                         <h3>LLM FINE-TUNING</h3>
-                        <img src="images/LLM - fine tuning.webp" alt="Icon"
-                            style="position: absolute; top: -13px; right: 8px; width: 45px; height: 40px;" />
+                        <img src="images/LLM FINE-TUNING - Y.avif" alt="Icon"
+                            style="position: absolute; top: -13px; right: 8px; width: 35px; height: 35px;" />
                         <p>Replacing vendor tools and SaaS subscriptions for RPA, OCR, and automation with custom
                             Agentic AI workflows..</p>
                     </div>
