--- a/slide12.html
+++ b/slide12.html
@@ -72,7 +72,7 @@
     />
   </header>
   <div style="display: flex; justify-content: flex-end; margin: 24px 0 0 0;">
-  <a href="images/ilovepdf_merged.pdf" download
+  <a href="images\ilovepdf_merged (1).pdf" download 
   style="display: inline-block; background: #0056ff; color: #fff; text-decoration: none; border: none; border-radius: 6px; padding: 10px 24px; font-size: 1rem; font-weight: 600; cursor: pointer; box-shadow: 0 2px 8px rgba(0,0,0,0.08); text-align: center;">
   Download PDF
 </a>
